--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
     <div class="container mt-5">
       <h1>Students</h1>
       <form action="/add" method="POST">
+        <!-- Inputkan Kode Script <script>alert('XSS');</script> Pada Field Name -->
         <input type="text" name="name" placeholder="Name" />
         <input type="number" name="age" placeholder="Age" />
         <input type="text" name="grade" placeholder="Grade" />
